rsa handler